adding admin guard and labeld entities table
