# backend/src/database/entities/index.ts
@@ -1,0 +1,21 @@
+import { CaseEntity } from './case.entity';
+import { CaseMemberEntity } from './case-member.entity';
+import { ConversationEntity } from './conversation.entity';
+import { InvestigationEntity } from './investigation.entity';
+import { LabeledEntityEntity } from './labeled-entity.entity';
+import { MessageEntity } from './message.entity';
+import { ScriptRunEntity } from './script-run.entity';
+import { TraceEntity } from './trace.entity';
+import { UserEntity } from './user.entity';
+
+export const entities = [
+  CaseEntity,
+  CaseMemberEntity,
+  ConversationEntity,
+  InvestigationEntity,
+  LabeledEntityEntity,
+  MessageEntity,
+  ScriptRunEntity,
+  TraceEntity,
+  UserEntity,
+];
